testData/resolve/macro/macroHighlightResolvingInMultipleFiles.s
localMacro macro
  endm

  otherMacro
  yetAnotherMacro

  <error descr="Cannot resolve macro 'INVALID_MACRO_NAME'">INVALID_MACRO_NAME</error>